--- a/vistas/login.html
+++ b/vistas/login.html
@@ -1,67 +1,46 @@
-<!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SIS | School</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- Bootstrap 3.3.5 -->
-    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="../public/css/font-awesome.css">
-   
-    <!-- Theme style -->
-    <link rel="stylesheet" href="../public/css/AdminLTE.min.css">
-    <!-- iCheck -->
-    <link rel="stylesheet" href="../public/css/blue.css">
-    <link rel="shortcut icon" href="../public/img/favicon.ico">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class="hold-transition login-page">
-    <div class="login-box">
-      <div class="login-logo">
-       <a href="https://compartiendocodigos.com"><b>SIS</b>School</a>
-      </div><!-- /.login-logo -->
-      <div class="login-box-body">
-        <p class="login-box-msg">Ingrese sus datos de Acceso</p>
-        <form method="post" id="frmAcceso">
-          <div class="form-group has-feedback">
-            <input type="text" id="logina" name="logina" class="form-control" placeholder="Usuario">
-            <span class="fa fa-user form-control-feedback"></span>
-          </div>
-          <div class="form-group has-feedback">
-            <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Password">
-            <span class="fa fa-key form-control-feedback"></span>
-          </div>
-          <div class="row">
-            <div class="col-xs-8">
-              
-            </div><!-- /.col -->
-            <div class="col-xs-4">
-              <button type="submit" class="btn btn-primary btn-block btn-flat">Ingresar</button>
-            </div><!-- /.col -->
-          </div>
-        </form>        
-
-      </div><!-- /.login-box-body -->
-    </div><!-- /.login-box -->
-
-    <!-- jQuery -->
-    <script src="../public/js/jquery-3.1.1.min.js"></script>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+               <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="images/colegio.png" />
+        <link rel="stylesheet" href="css/index.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <title>Pagina Docente-Estudiante</title>
+    </head>
+    <body background="">
+        <div class="container mt-4 col-lg-6">
+            <div class="card col-sm-10">
+                <div class="card-body">
+                    <form class="form-sign" method="POST" id="frmAcceso">
+                        <div class="form-group text-center">
+                            <h3>Log In</h3>
+                            <img src="images/iniciar-sesion.png" width="170"/><br>
+                            <!--<label>Bienvenidos al Sistema</label>-->
+                        </div>
+                        <div class="form-group">
+                           <!-- <label>Usuario:</label>-->
+                            <input type="text" id="usuario" name="txtuser" class="form-control" placeholder="Usuario"
+                            >
+                        </div>
+                        <div class="form-group">
+                            <!--<label>Password:</label>-->
+                            <input type="password" id="password" name="txtpass" class="form-control" placeholder="Contraseña">
+                        </div>
+                        <input type="submit" id="enviar" name="accion" value="Ingresar" class="btn btn-primary btn-block">
+                    </form>
+                </div>
+            </div>           
+        </div>
+        <script src="../public/js/jquery-3.1.1.min.js"></script>
     <!-- Bootstrap 3.3.5 -->
     <script src="../public/js/bootstrap.min.js"></script>
      <!-- Bootbox -->
     <script src="../public/js/bootbox.min.js"></script>
 
     <script type="text/javascript" src="scripts/login.js"></script>
+    </body>
 
-
-  </body>
-</html> 
+    
+</html>
